# agent-langchain

./: .env.example  .gitignore  README.md  agent.py  cost_estimate_sample.md  main.py  pyproject.toml  requirements.in  requirements.txt  run_agent.sh  run_cost_demo.py  run_healer_demo.py  validate_keys.py
.chroma_db/: chroma.sqlite3
configs/guidelines/: ci-guidelines.md  docker-guidelines.md  k8s-guidelines.md  shell-guidelines.md  terraform-guidelines.md  test-guidelines.md
configs/prompts/: system_master.md
policies/ci/: workflow.rego
policies/docker/: dockerfile.rego
policies/k8s/: manifests.rego
sample_app/: .devops_memory.json  .dockerignore  .gitleaks.toml  Dockerfile  docker-compose.yml  generated_file  scan_configs.md
sample_app/.zap/: rules.tsv
sample_app/backend/: .dockerignore  Dockerfile  index.js  package.json  sonar-project.properties  tracing.js
sample_app/frontend/: .dockerignore  Dockerfile  sonar-project.properties  tracing.js
sample_app/k8s/: manifest.yaml
scripts/: install_tools.sh  list_gemini_models.py  r.sh  verify_upgrade.sh
src/: schemas.py
src/agents/: cicd_agent.py  code_analysis_agent.py  cost_agent.py  debugging_agent.py  deterministic_reviewer.py  docker_agents.py  docker_compose_agent.py  guidelines_compliance_agent.py  k8s_agents.py  (+3 more)
tests/: conftest.py  test_cost_agent.py  test_dashboard_gen.py  test_exact_models.py  test_gemini_models.py  test_import.py  test_k8s_prompts.py  test_memory.py  test_policy.py  test_sanitizer.py  test_schemas.py  test_secrets.py  test_specific_models.py  test_v2_modules.py
(+67 files in other folders)
