[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-agent"
version = "5.0.0"
description = "AI-powered multi-agent DevOps pipeline — generates production-grade infrastructure from any codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "requests",
    "pyyaml",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
aws = ["boto3"]
vault = ["hvac"]

[project.scripts]
devops-agent = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
